--- a/OLC1P1/OLC1P1/OLC1P1.csproj
+++ b/OLC1P1/OLC1P1/OLC1P1.csproj
@@ -61,6 +61,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnalizadorL\Lexico.cs" />
+    <Compile Include="AnalizadorL\Token.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
